[package]
name = "photon"
version = "0.1.0"
edition = "2021"

[lib]
name = "photon"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
colored = "3.0.0"
colored_text = "0.3.0"
memmap2 = "0.9.9"
ordered-float = "5.1.0"
rand = "0.9.2"
rayon = "1.11.0"
rkyv = "0.8.14"
serde = { version = "1.0.228", features = ["derive"] }
